# DVRLite

./: CMakeLists.txt  CMakeSettings.json  DVRLite.service  README.md  regenerate-gsoap.bat
DVRLite/: CMakeLists.txt  DVRLite.cpp  DVRLite.h  Log.cpp  Log.h  Source.cpp  Source.h
DVRLite/FFmpeg/: FFmpeg.cpp  FFmpeg.h
DVRLite/Onvif/: Onvif.cpp  Onvif.h  PullPointSubscription.cpp  PullPointSubscription.h
DVRLite/Web/: AppComponent.hpp  JsonCache.cpp  JsonCache.h  MediaController.cpp  MediaController.hpp  Utils.cpp  Utils.hpp
DVRLite/gsoap-onvif/: RemoteDiscoveryBinding.nsmap  mecevp.h  soapAnalyticsDeviceBindingProxy.cpp  soapAnalyticsDeviceBindingProxy.h  soapDeviceBindingProxy.cpp  soapDeviceBindingProxy.h  soapDeviceIOBindingProxy.cpp  soapDeviceIOBindingProxy.h  soapDisplayBindingProxy.cpp  soapDisplayBindingProxy.h  soapImagingBindingProxy.cpp  soapImagingBindingProxy.h  soapMediaBindingProxy.cpp  soapMediaBindingProxy.h  soapPTZBindingProxy.cpp  soapPTZBindingProxy.h  soapPullPointSubscriptionBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.h  soapReceiverBindingProxy.cpp  soapReceiverBindingProxy.h  soapRecordingBindingProxy.cpp  soapRecordingBindingProxy.h  soapRemoteDiscoveryBindingProxy.cpp  soapRemoteDiscoveryBindingProxy.h  soapReplayBindingProxy.cpp  soapReplayBindingProxy.h  soapRuleEngineBindingProxy.cpp  soapRuleEngineBindingProxy.h  soapSearchBindingProxy.cpp  soapSearchBindingProxy.h  soapwsddProxy.cpp  soapwsddProxy.h  wsseapi.cpp
enc_temp_folder/b7ef1a512a2d3699c6a6b643b8203b49/: MediaController.cpp
old/: Onvif.cpp
old/gsoap/: qstringCompare.h
web/: add.html  config.html  log.html  main.js  snapshot.html  snapshot.js  sourcelist.html  style.css  templates.json  timeline.js  video.html  videolist.html
web/themes/: default.json  hacker.json  light.json  pastel.json
